--- a/Parse.ipynb
+++ b/Parse.ipynb
@@ -40,16 +40,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 101,
    "id": "22e3606b-45c5-4e8e-baaa-7a813cebc1ec",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import shutil\n",
+    "import pickle\n",
     "from lxml import html\n",
     "from contextlib import suppress\n",
+    "from dataclasses import dataclass\n",
     "\n",
+    "import torch\n",
+    "import numpy as np\n",
     "from PIL import Image\n",
     "from facenet_pytorch import MTCNN, InceptionResnetV1"
    ]
@@ -156,44 +160,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 102,
+   "id": "535f4d6c-8d46-4f49-a9af-a8ca6500d19c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embeds_models = [model1, model2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "ab6318f2-126d-4416-8707-cca5ce49f49c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PhotoEmbedingStorage:\n",
+    "    \"\"\"This storage class contains \n",
+    "    primary photo path+name: generated unique id \n",
+    "    generated unique id: [model1 embeddings, ..., modelN embeddings]\n",
+    "    \"\"\"\n",
+    "    def __init__(self, path=None):\n",
+    "        self.path = path\n",
+    "        self.path_id: dict[str, int] = {}\n",
+    "        self.id_path: dict[int, str] = {}\n",
+    "        self.id_embs: dict[int, np.ndarray] = {}\n",
+    "        \n",
+    "        if path:\n",
+    "            self.load()\n",
+    "    \n",
+    "    def save(self, path=None):\n",
+    "        \"Save storage to path\"\n",
+    "        if path is None:\n",
+    "            if self.path:\n",
+    "                path = self.path\n",
+    "            else:\n",
+    "                raise Exception('Provide path to save')\n",
+    "\n",
+    "        with open(path, 'wb') as f:\n",
+    "            pickle.dump({\n",
+    "                'path_id': self.path_id,\n",
+    "                'id_path': self.id_path,\n",
+    "                'id_embs': self.id_embs,\n",
+    "            }, f)\n",
+    "            \n",
+    "                \n",
+    "    def load(self, path=None):\n",
+    "        \"Load storage to path\"\n",
+    "        if path is None:\n",
+    "            if self.path:\n",
+    "                path = self.path\n",
+    "            else:\n",
+    "                raise Exception('Provide path to save')\n",
+    "    \n",
+    "        with open(path, 'rb') as f:\n",
+    "            loaded_dict = pickle.load(f)\n",
+    "            self.path_id = loaded_dict['path_id']\n",
+    "            self.id_path = loaded_dict['id_path']\n",
+    "            self.id_embs = loaded_dict['id_embs']\n",
+    "            \n",
+    "            \n",
+    "    def __generate_id(self) -> int:\n",
+    "        return len(self.path_id)\n",
+    "    \n",
+    "    \n",
+    "    def __setitem__(self, key: str, value: list[np.ndarray|torch.Tensor]):\n",
+    "        \"\"\"Put embeddings in storage\n",
+    "        :param key: primary photo path+name\n",
+    "        :param value: list with embeddings from models\n",
+    "        \"\"\"\n",
+    "        assert isinstance(key, str)\n",
+    "        assert isinstance(value, list)\n",
+    "        \n",
+    "        for emb in value:\n",
+    "            assert isinstance(emb, (np.ndarray, torch.Tensor))\n",
+    "        \n",
+    "        uid = self.__generate_id()\n",
+    "        self.path_id[key] = uid\n",
+    "        self.id_path[uid] = key\n",
+    "        self.id_embs[uid] = embs\n",
+    "        \n",
+    "    \n",
+    "    def __getitem__(self, item: tuple[int|str, int]) -> np.ndarray:\n",
+    "        \"\"\"Get embeddings from storage\n",
+    "        if item is tuple, there are key and n\n",
+    "        :param key: id or primary path\n",
+    "        :param n: since we have different embeddings\n",
+    "            from different models, this argument responsible \n",
+    "            for number of returned embedding, N - embedding from N+1 model.\n",
+    "            default: 0\n",
+    "        \"\"\"\n",
+    "        if isinstance(item, tuple):\n",
+    "            key, n = item\n",
+    "        else:\n",
+    "            key, n = item, 0\n",
+    "        \n",
+    "        if isinstance(key, int):\n",
+    "            return self.id_embs[key][n]\n",
+    "        \n",
+    "        elif isinstance(key, str):\n",
+    "            uid = self.path_id[key]\n",
+    "            return self.id_embs[uid][n]\n",
+    "        \n",
+    "        else:\n",
+    "            raise TypeError(f'Dont understand key type: {type(key)}')\n",
+    "            \n",
+    "\n",
+    "    def __len__(self) -> int:\n",
+    "        return len(self.path_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "a0e0ff2b-4ead-49c5-80c3-fbc3398539ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embeder = PhotoEmbedingStorage()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "c71919f7-7f7a-46fd-9d74-39cff3dbc6fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_photo(photo_path:str, saved_path:str):\n",
+    "    img = Image.open(photo_path)\n",
+    "    img_cropped = mtcnn(img, save_path='tmp.png').unsqueeze(0)\n",
+    "\n",
+    "    embs = [model(img_cropped) for model in embeds_models]\n",
+    "    embeder[photo_path] = embs\n",
+    "\n",
+    "    uid = embeder.path_id[photo_path]\n",
+    "    shutil.move('tmp.png', f'{saved_path}/{uid}.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "id": "9af8202d-22fc-404c-a99e-49da7319c054",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\royta\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torch\\nn\\functional.py:780: UserWarning: Note that order of the arguments: ceil_mode and return_indices will changeto match the args list in nn.MaxPool2d in a future release.\n",
-      "  warnings.warn(\"Note that order of the arguments: ceil_mode and return_indices will change\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for current, previous in zip(messages[1:], messages[:-1]):\n",
-    "    if previous['photo']:\n",
-    "        photo_path = 'tg_data/' + previous['photo']\n",
-    "        photo_name = previous['photo'].split('/')[-1]\n",
-    "        \n",
-    "        if current['text'] in ['💌', '❤️', '👍']:\n",
-    "            saved_path = 'data/target/' + photo_name\n",
+    "with torch.no_grad():\n",
+    "    for current, previous in zip(messages[1:], messages[:-1]):\n",
+    "        if previous['photo']:\n",
+    "            photo_path = 'tg_data/' + previous['photo']\n",
     "\n",
-    "        elif current['text'] in ['👎']:\n",
-    "            saved_path = 'data/opposite/' + photo_name\n",
+    "            if current['text'] in ['💌', '❤️', '👍']:\n",
+    "                saved_path = 'data/target'\n",
+    "\n",
+    "            elif current['text'] in ['👎']:\n",
+    "                saved_path = 'data/opposite'\n",
+    "\n",
+    "            else:\n",
+    "                continue\n",
     "        \n",
-    "        else:\n",
-    "            continue\n",
     "            \n",
-    "        \n",
-    "        while os.path.exists(saved_path):\n",
-    "            path, e = saved_path.split('.')\n",
-    "            path += ' i'\n",
-    "            saved_path = f\"{path}.{e}\"\n",
-    "            \n",
-    "        img = Image.open(photo_path)\n",
-    "        img_cropped = mtcnn(img, save_path=saved_path)"
+    "            process_photo(photo_path, saved_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03e4b1be-9304-4b31-84c2-5eda88bde1fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embeder.save('emb storage.pkl')"
    ]
   },
   {
@@ -204,6 +343,16 @@
    "outputs": [],
    "source": [
     "DATASET_PATH = \"data\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de8839ed-6492-40ef-9e1c-e026e37e92f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def procces_markup(src, dst)"
    ]
   },
   {
